# RL-Mario

./: .gitignore  Mario RL Tutorial.ipynb  PPOmario.py  README.md  inference.py  main.ipynb  main.py  mario.gymnasium.ipynb  mario.py  parallel.py  pyproject.toml  single.py  single_icm.py  test_single.py
checkpoints/2025-05-07T19-06-30/: log
checkpoints/2025-05-07T19-14-14/: log
checkpoints/2025-05-07T19-23-39/: log
