[project]
name = "rl-game"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "gym-super-mario-bros>=7.4.0",
    "numpy==1.22",
    "seaborn>=0.13.2",
    "tensorboard>=2.19.0",
    "torch>=2.7.0",
    "torchaudio>=2.7.0",
    "torchrl>=0.8.0",
    "torchvision>=0.22.0",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
